--- a/Conway.Api/appsettings.json
+++ b/Conway.Api/appsettings.json
@@ -12,5 +12,16 @@
       "Endpoint": true,
       "Query": false
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Debug",
+        "System": "Debug"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
